Made jupyter notebook more gneralizable

--- a/notebooks/02_DataExplorationBothDataSets.ipynb
+++ b/notebooks/02_DataExplorationBothDataSets.ipynb
@@ -11,12 +11,31 @@
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import keras\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "base_dir = Path(\"~/repos/summerschool2023/projects/fall-detection/fall_detection_data\").expanduser()\n",
-    "processed_dir = base_dir / \"processed\"  # Where your preprocessed data is\n",
-    "models_dir = base_dir / \"models\"        # Where to save trained models\n",
+    "# Use relative path from notebook location\n",
+    "# This works whether you're in notebooks/, scripts/, or project root\n",
+    "notebook_dir = Path.cwd()\n",
+    "\n",
+    "# Find project root (where pyproject.toml is)\n",
+    "project_root = notebook_dir\n",
+    "while not (project_root / \"pyproject.toml\").exists():\n",
+    "    project_root = project_root.parent\n",
+    "    if project_root == project_root.parent:  # Reached filesystem root\n",
+    "        raise FileNotFoundError(\"Could not find project root (pyproject.toml not found)\")\n",
+    "\n",
+    "# Now use relative paths from project root\n",
+    "base_dir = project_root / \"fall_detection_data\"\n",
+    "processed_dir = base_dir / \"processed\"\n",
+    "models_dir = base_dir / \"models\"\n",
     "models_dir.mkdir(exist_ok=True)\n",
-    "output_dir = models_dir  # Use this for saving mode\n",
+    "output_dir = models_dir\n",
+    "\n",
+    "print(f\"📂 Project root: {project_root}\")\n",
+    "print(f\"📂 Data directory: {base_dir}\")\n",
+    "print(f\"📂 Models directory: {models_dir}\")\n",
+    "print()\n",
     "\n",
     "print(\"=\" * 80)\n",
     "print(\"CURRENT DIRECTORY STRUCTURE\")\n",
@@ -186,8 +205,7 @@
     "   - Apply Algorithm 1 for temporal segmentation\n",
     "   - Extract features according to Table I\n",
     "3. ⏭️  Z-score normalization and dataset fusion\n",
-    "4. ⏭️  Build and train FallNet\n",
-    "\"\"\")"
+    "4. ⏭️  Build and train FallNet"
    ]
   },
   {
@@ -236,11 +254,33 @@
     "## 2. Define Paths and Configuration\n",
     "\n",
     "# %%\n",
-    "base_dir = Path(\"~/repos/summerschool2023/projects/fall-detection/fall_detection_data\").expanduser()\n",
+    "# Auto-detect project root (works from any directory in the project)\n",
+    "current_dir = Path.cwd()\n",
+    "\n",
+    "# Find project root by looking for pyproject.toml\n",
+    "project_root = current_dir\n",
+    "while not (project_root / \"pyproject.toml\").exists():\n",
+    "    project_root = project_root.parent\n",
+    "    if project_root == project_root.parent:  # Reached filesystem root\n",
+    "        # Fallback: assume we're in notebooks/ directory\n",
+    "        project_root = current_dir.parent if current_dir.name == \"notebooks\" else current_dir\n",
+    "        break\n",
+    "\n",
+    "# Define paths relative to project root\n",
+    "base_dir = project_root / \"fall_detection_data\"\n",
     "kfall_sensor_dir = base_dir / \"KFall\" / \"sensor_data\"\n",
     "kfall_labels_dir = base_dir / \"KFall\" / \"label_data\"\n",
     "sisfall_dir = base_dir / \"SisFall\"\n",
     "processed_dir = base_dir / \"processed\"\n",
+    "\n",
+    "# Verify paths exist\n",
+    "if not base_dir.exists():\n",
+    "    raise FileNotFoundError(\n",
+    "        f\"Data directory not found: {base_dir}\\n\"\n",
+    "        f\"Expected structure: {project_root}/fall_detection_data/\\n\"\n",
+    "        f\"Current directory: {current_dir}\\n\"\n",
+    "        f\"Project root: {project_root}\"\n",
+    "    )\n",
     "\n",
     "# Clean up processed directory\n",
     "print(\"🧹 Cleaning processed directory...\")\n",
@@ -253,6 +293,8 @@
     "    processed_dir.mkdir(exist_ok=True)\n",
     "\n",
     "print(\"\\n✅ Directories configured:\")\n",
+    "print(f\"   Project root: {project_root}\")\n",
+    "print(f\"   Data directory: {base_dir}\")\n",
     "print(f\"   KFall sensor data: {kfall_sensor_dir}\")\n",
     "print(f\"   KFall labels: {kfall_labels_dir}\")\n",
     "print(f\"   SisFall data: {sisfall_dir}\")\n",
@@ -884,7 +926,7 @@
     "  - Status: {'✅ READY FOR TRAINING' if fall_init_rank <= 2 else '❌ NEEDS REVIEW'}\n",
     "\n",
     "Next Steps:\n",
-    "  1. Load data with: X = np.load('processed/X_data.npy')\n",
+    "  1. Load data with: X = np.load('{processed_dir}/X_data.npy')\n",
     "  2. Train FallNet model\n",
     "  3. Evaluate on stratified K-fold cross-validation\n",
     "\"\"\"\n",
